Release v1.4.5 with major feature additions
Adds numerous improvements across the plugin:

- Backpacks: shared couple mode, configurable size, read-only flag, admin backpack command, notify-on-open, and new backpacks.yml config
- Homes: rename, default home, delete confirmation, clickable home list in chat, and persistent default home storage
- Ceremonies: countdown timer, custom vows, status command, private/random vow modes
- Families: member adoption improvements (cycle detection, member adoption toggle, partner adoption prevention), leave/kick confirmations, info/members commands, broadcast events, family requests command
- Requests: proposal cooldown, pending/cancel subcommands, improved status dashboard, duplicate proposal checks
- Love notes: chat-based inbox, read, and delete commands
- Admin command (/marry admin backpack <player>)
- Tab completion overhaul with permission-aware suggestions
- Various language and config additions